# jc_people_counting

./: CMakeLists.txt  DetectedPerson.cpp  DetectedPerson.h  Detector.cpp  Detector.h  FaceDetector.cpp  FaceDetector.h  LineDetector.cpp  LineDetector.h  MovingAvgVal.cpp  MovingAvgVal.h  Parameters.cpp  Parameters.h  PeopleCountDetector.cpp  PeopleCountDetector.h  PreProcessor.cpp  PreProcessor.h  README.md  ROI.cpp  ROI.h  config_run.py  main.cpp  receive_encoded_files_jc10.py  sendJsonData.cpp  util.cpp  util.h  util.h.h
configurations/: conf_eliel.json  conf_lasi.json  conf_local.json  logger.conf
configurations/debug/: debug_conf.json
local_controller/: CMakeLists.txt  README.md  capture_stream.sh  capture_video.py  capture_video.sh  compress_and_encrypt_files.py  compress_and_encrypt_files.sh  ping_routers.py  receive_encoded_files.py  receive_files.py  receive_files.sh  receive_files_local.sh  requirements.txt  run.sh  send_encrypted_files.sh  send_files.py  send_files.sh
